--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "fast-sort": "^3.4.1",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "daisyui": "^5.1.27",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
