--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fast-sort": "^3.4.1",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
